--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,24 @@
 rvm:
-  - 2.0.0-p353
-  - 2.2.4
+  - 2.0.0
+  - 2.1.10
+  - 2.2.5
+  - 2.3.1
+  - ruby-head
+gemfile:
+  - gemfiles/Gemfile_rack_1
+  - gemfiles/Gemfile_rack_2
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: 2.3.1
+    - rvm: ruby-head
+  exclude:
+    - rvm: 2.0.0
+      gemfile: gemfiles/Gemfile_rack_2
+    - rvm: 2.1.10
+      gemfile: gemfiles/Gemfile_rack_2
+    - rvm: 2.3.1
+      gemfile: gemfiles/Gemfile_rack_1
+    - rvm: ruby-head
+      gemfile: gemfiles/Gemfile_rack_1
 script: rake test
